# Mastering-Cpp-Scientific-Computing

./: .gitignore  README.md  index.html  package-lock.json  package.json  style.css
.github/workflows/: pages.yml
code/poly/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
code/poly/src/: CMakeLists.txt
code/poly/src/include/poly/: interpolate.hpp  poly.hpp
code/poly/src/src/: interpolate.cpp
code/poly/test/: CMakeLists.txt  test-interpolate.cpp
